# windows

./: .gitmodules  README.md
Rack/: 001_BasePlate.prt  002_TopPlateFrame.prt  003_TopPlate.prt  004_ArmSupport.prt  005_OnTopPlate.prt  005_OnTopPlateAbove.prt  006_CameraStandSides.prt  007_CameraStandStabilizers.prt  Arm.prt  ArmSupport2.prt  Armleft.prt  Armright.prt  Plate3.prt  Print.prt  PrintAdditional.prt  PrintAdditional_dwg_1-1.prt  Print_dwg_1-1.prt  Stueckli.prt  WholeThing.prt
Software/: .gitignore  CMakeLists.txt  clean_up_cmake.sh  windows.cpp
Software/Calibration/Matlab/: CalibrationMatlab.m  Calibration_Matlab.txt
Software/Calibration/cpp/: CMakeLists.txt  calib.yaml  calib2.yaml  stereo_camera.cpp  stereo_camera.hpp
Software/CameraHandler/: CMakeLists.txt  camera_handler.cpp  camera_handler.hpp
Software/FaceDetection/: .gitignore  CMakeLists.txt  face_detection.cpp  face_detection.hpp
Software/ProjectorCalibration/: CMakeLists.txt  projector_calibration.cpp  projector_calibration.hpp  projetor_calibration_old.cpp
Software/Scene/: CMakeLists.txt  readme.txt
Software/Scene/cmake/modules/: FindGLM.cmake
Software/Scene/includes/learnopengl/: filesystem.h  mesh.h  model.h  shader.h  shader_m.h
Software/Scene/resources/textures/: sources
Software/Scene/src/: callbacks.cpp  callbacks.h  windowscene.cpp  windowscene.h
Software/calibration_data/: calib360.yaml  calib720.yaml  calib_proj.yml  calibstereo360.yaml  calibstereo720.yaml  projcalibout.yml  projcalibout.yml.backup
